style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  overflow: hidden;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  height: 100svh;
  background: linear-gradient(90deg, #ffffff, #e4e4e4, #ffffff);
  font-family: Arial, Helvetica, sans-serif;
  user-select: none;
}

.title {
  margin: 10px 0 10px 0;
  font-weight: bold;
  font-size: 30px;
}

.scoreLevel_div {
  width: 297px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
}
#score_id,
#level {
  margin: 10px;
  font-weight: bold;
}

.grid {
  display: grid;
  grid-template-columns: repeat(10, auto);
  grid-template-rows: repeat(20, auto);
  padding: 0.6vh;
  gap: 0.2vh;
  border-radius: 0.6vh;
  background-color: rgba(1, 8, 89);
}

.grid > div {
  --cell-size: min(3.2vh, 6.4vw);
  height: var(--cell-size);
  width: var(--cell-size);
  border-radius: 0.3vh;
  background-color: rgba(126, 150, 221, 0.2);
}

.grid > div.ghost {
  background-color: rgba(255, 255, 255, 0.2);
}

.grid > div.I {
  background-color: #30dae9;
}

.grid > div.J {
  background-color: #117fda;
}

.grid > div.L {
  background-color: #d0920d;
}

.grid > div.O {
  background-color: #f7e139;
}

.grid > div.S {
  background-color: #45de45;
}

.grid > div.Z {
  background-color: #d83a4c;
}

.grid > div.T {
  background-color: #903ceb;
}

.grid > div.I,
.grid > div.J,
.grid > div.L,
.grid > div.O,
.grid > div.S,
.grid > div.T,
.grid > div.Z,
.grid > div.ghost,
.grid > div.sad {
  box-shadow: inset 2px 2px 2px rgba(255, 255, 255, 0.2),
    inset -2px -2px 2px rgba(1, 8, 89, 0.2);
}

.grid > div.sad {
  background-color: #f2c35b;
  transition: background-color 0.5s, box-shadow 0.5s;
}

.grid > div.hide {
  animation: hide 0.5s;
}

.tips_container {
  text-align: center;
  margin-top: 15px;
}

.btnsTips_container {
  width: 397px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin-top: 5px;
  margin-bottom: 5px;
}

.btnsTips_container div {
  display: flex;
  flex-direction: row;
  text-align: center;
  width: 70px;
  min-width: 70px;
  max-width: 130px;
  flex-basis: 49%;
  margin: 4px 5px;
}

.btnsTips_container div span {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 30px;
  height: 20px;
  min-height: 20px;
  min-width: 30px;
  font-size: 14px;
  margin-right: 10px;
  border: 1px solid gray;
  border-radius: 25%;
  background-color: lightgray;
}

.lCtrl {
  width: 80px;
  min-width: 80px !important;
  border-radius: 5% !important;
}

.btns_container {
  margin-top: 10px;
}

button {
  width: 80px;
  height: 25px;
  background-color: rgb(0, 128, 0);
  color: white;
  text-align: center;
  margin: 0 5px;
  border-radius: 50px;
}

button:hover {
  cursor: pointer;
  background-color: rgb(0, 128, 0, 0.5);
}

@keyframes hide {
  0% {
    transform: scale(0.8) rotate(30deg);
  }

  45% {
    transform: scale(0.8) rotate(-30deg);
  }

  90% {
    transform: scale(1) rotate(0);
  }
}

@media screen and (max-width: 500px) {
  body {
    scale: 0.9;
  }
  .btns_container {
    margin-top: 10px;
  }
  .title {
    margin: -10px 0 -5px 0;
  }
  .grid > div {
    height: min(3vh, 6vw);
    width: min(3vh, 6vw);
  }
}

